test/syntaxerrors/TestNumericMethodName.jdc
println("Hello world!");

void 8(){
    //illegal method name
}